RESOLVED FIXED28730
RenderThemeMac.mm has incorrect casting for media control element
https://bugs.webkit.org/show_bug.cgi?id=28730
Summary RenderThemeMac.mm has incorrect casting for media control element
Hin-Chung Lam
Reported 2009-08-25 20:49:18 PDT
There is an incorrect casting of MediaControlMuteButtonElement to MediaControlPlayButtonElement in RenderThemeMac::paintMediaMuteButton().
Attachments
patch + change log (1.61 KB, patch)
2009-08-25 20:54 PDT, Hin-Chung Lam
no flags
Hin-Chung Lam
Comment 1 2009-08-25 20:54:38 PDT
Created attachment 38593 [details] patch + change log This bug does not cause any problem but is apparently incorrect.
Eric Seidel (no email)
Comment 2 2009-08-26 07:06:21 PDT
Comment on attachment 38593 [details] patch + change log Clearing flags on attachment: 38593 Committed r47778: <http://trac.webkit.org/changeset/47778>
Eric Seidel (no email)
Comment 3 2009-08-26 07:06:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.