2009-08-26  Alpha Lam  <hclam@chromium.org>

Reviewed by David Levin.

        RenderThemeMac.mm has incorrect casting for media control element.
        https://bugs.webkit.org/show_bug.cgi?id=28730

        MediaControlMuteButtonElement was incorrectly casted to
        MediaControlPlayButtonElement. This is corrected in this patch.

        No new tests because this is code cleanup and is already covered by existing
        media layout tests.

        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::paintMediaMuteButton):


Canonical link: https://commits.webkit.org/39354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47778 268f45cc-cd09-0410-ab3c-d52691b4dbfc